# claude-efficient

./: .claudeignore  .geminiignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  SPEC_01_04_FIXES.md  SPEC_05_06_revised.md  SPEC_12_16_revised.md  Spec_Final_integration.md  TASKS.md  claude_thoughts.md  pyproject.toml  settings.json  summary.md  test_desc.py
.claude/: settings.json
.github/workflows/: ci.yml
old_mds/: CLAUDE.md  SPEC_07_11_revised.md
scripts/: benchmark_token_cost.py  evaluate_generator.py
src/claude_efficient/analysis/: cache_health.py  session_parser.py  telemetry.py  waste_detector.py
src/claude_efficient/cli/: AGENTS.md  CLAUDE.md  audit.py  ce_codex.py  ce_cursor.py  ce_gemini.py  ce_opencode.py  ce_router.py  ce_wrapper_core.py  commands.py  gains.py  helpers.py  init.py  main.py  session.py
src/claude_efficient/config/: defaults.py  defaults.toml  loader.py
src/claude_efficient/generators/: .gitignore  CLAUDE.md  GEMINI.md  __init__.py  _legacy.py  architecture.py  backends.py  ci.yml  claude_md.py  claudeignore.py  extractor.py  fallbacks.py  mcp.py  orchestrator.py  prompt.py  selector.py  tasks_md.py
src/claude_efficient/hooks/: output_enforcer.py
src/claude_efficient/prompt/: optimizer.py
src/claude_efficient/session/: AGENTS.md  CLAUDE.md  compact_manager.py  mcp_config.py  mcp_pruner.py  model_router.py  output_budget.py  subagent_planner.py
tests/: CLAUDE.md  test_ast_extractor.py  test_backends.py  test_cache_health.py  test_ce_wrappers.py  test_claude_md.py  test_claudeignore.py  test_cli_structure.py  test_compact_manager.py  test_init.py  test_main_module.py  test_mcp_config.py  test_mcp_pruner.py  test_model_router.py  test_optimizer.py  test_scaffold.py  test_session.py  test_session_memory.py  test_tasks_md.py  test_telemetry.py  test_waste_detector.py
