[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ce-tool"
version = "0.1.0"
description = "Token optimization wrapper for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "tomllib>=1.0; python_version < '3.11'",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/thedotmack/claude-efficient"
Issues   = "https://github.com/thedotmack/claude-efficient/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-mock>=3.0", "build"]

[project.scripts]
ce = "claude_efficient.cli.main:cli"
ce-codex = "claude_efficient.cli.ce_codex:main"
ce-gemini = "claude_efficient.cli.ce_gemini:main"
ce-opencode = "claude_efficient.cli.ce_opencode:main"
ce-cursor = "claude_efficient.cli.ce_cursor:main"
ce-router = "claude_efficient.cli.ce_router:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_efficient"]